crates/ruff_python_parser/tests/snapshots/invalid_syntax@single_star_yield.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/single_star_yield.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            8,
        ),
        range: 0..18,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(
                        7,
                    ),
                    range: 0..17,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("f"),
                        range: 4..5,
                        node_index: NodeIndex(
                            0,
                        ),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 5..7,
                        node_index: NodeIndex(
                            1,
                        ),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(
                                    6,
                                ),
                                range: 9..17,
                                value: Yield(
                                    ExprYield {
                                        node_index: NodeIndex(
                                            5,
                                        ),
                                        range: 9..17,
                                        value: Some(
                                            Starred(
                                                ExprStarred {
                                                    node_index: NodeIndex(
                                                        4,
                                                    ),
                                                    range: 15..17,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(
                                                                3,
                                                            ),
                                                            range: 16..17,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | def f(): yield *x
  |                ^^ Syntax Error: Starred expression cannot be used here
  |
